<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragmentscreen_background"
    tools:context=".ui.FragmentSetupScreen">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/layoutshapes"
            android:elevation="20dp"
            android:focusable="true"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/welcometext"
                style="@style/Textstyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/welcome_nto"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/penlogo"
                app:layout_constraintBottom_toBottomOf="@+id/app_name"
                app:layout_constraintEnd_toStartOf="@+id/app_name"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/app_name" />

            <TextView
                android:id="@+id/app_name"
                style="@style/Textstyle1"
                android:text="@string/quizzy"
                android:textColor="@color/textcolor2"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pen"
                app:layout_constraintTop_toBottomOf="@+id/welcometext" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Rules_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="20dp"
            android:focusable="true"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome_layout">

            <TextView
                android:id="@+id/rules"
                style="@style/Textstyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/rules"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules">

                <TextView
                    android:id="@+id/rule_1"
                    style="@style/Rules_list_style"
                    android:text="@string/rule_1" />

                <TextView
                    android:id="@+id/rule_2"
                    style="@style/Rules_list_style"
                    android:text="@string/rule_2" />

                <TextView
                    android:id="@+id/rule_3"
                    style="@style/Rules_list_style"
                    android:text="@string/rule_3" />

                <TextView
                    android:id="@+id/rule_4"
                    style="@style/Rules_list_style"
                    android:text="@string/rule_4" />

                <TextView
                    android:id="@+id/rule_5"
                    style="@style/Rules_list_style"
                    android:text="@string/rule_5" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/start_button"
            style="@style/Button_style"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rules_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>