<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    android:background="@drawable/item_background">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="status_image,bookmark_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_text_view"
            style="@style/Textstyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/demo_name"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/answer_status"
        android:src="@drawable/ques_status_0"
        app:layout_constraintEnd_toEndOf="@+id/bookmark_image"
        app:layout_constraintStart_toStartOf="@+id/bookmark_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bookmark_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/bookmark_button"
        android:src="@drawable/bookmark_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/status_image" />


</androidx.constraintlayout.widget.ConstraintLayout>